fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -50,13 +50,11 @@ html {
 }
 
 body {
-    width: 100vw;
     height: 100%;
     font-family: "Lexend", serif;
     position: relative;
 
     background-color: var(--main-color);
-    overflow-x: hidden;
 }
 
 *,
@@ -65,6 +63,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+}
+
+#root {
+    height: 100%;
+    overflow-x: hidden;
 }
 
 button {
